--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,6 @@ body {
     margin : 0px;
     padding: 0%;
   }
-  
   /* Estilo para el contenedor de la imagen */
   .container {
     display: flex;
@@ -13,7 +12,6 @@ body {
     align-items: center; /* Centra verticalmente */
     height: 100vh; /* Tamaño del contenedor igual a la altura de la ventana */
   }
-  
   /* Estilo para la imagen */
   img {
     padding-top: 40%;
@@ -175,4 +173,42 @@ body {
   .example-2 .icon-content a[data-social="youtube"] ~ .tooltip {
     background-color: #ff0000;
   }
-  
+  .container {
+    position: relative;
+    width: 600px;
+    height: 10vh; /* Ajusta la altura según sea necesario */
+    justify-content: center;
+    margin: auto;
+    margin-left: 60px;
+  }
+  .image {
+    position: absolute;
+    top: 35%;
+    left: 50%;
+    transform: translate(-50%, -50%) rotate(175deg);
+  }
+  .image-1 { z-index: 6; }
+  .image-2 { z-index: 5; }
+  .image-3 { z-index: 4; }
+  .image-4 { z-index: 3; }
+  .image-5 { z-index: 2; }
+  .image-6 { z-index: 1; }
+
+  /* Estilos para dispositivos móviles */
+  @media (max-width: 600px) {
+    .image-1 { width: 70vw; }
+    .image-2 { width: 75vw; }
+    .image-3 { width: 80vw; }
+    .image-4 { width: 85vw; }
+    .image-5 { width: 90vw; }
+    .image-6 { width: 100vw; }
+  }
+  /* Estilos para pantallas más grandes */
+  @media (min-width: 601px) {
+    .image-1 { width: 400px; }
+    .image-2 { width: 670px; }
+    .image-3 { width: 570px; top: 40%; }
+    .image-4 { width: 670px; top: 45%; }
+    .image-5 { width: 800px; top: 50%; }
+    .image-6 { width: 1200px; top: 55%; }
+    }
