--- a/src/App.css
+++ b/src/App.css
@@ -24,7 +24,9 @@ img {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 30px;
+  margin-top: 300px;
+  position: relative;
+  bottom: 200px;
   height: 500px;
 }
 
@@ -37,7 +39,7 @@ img {
   justify-content: center;
   align-items: center;
   width: 64px;
-  height: 64px;
+  height: 0px;
   border-radius: 50%;
   transition: background-color 0.3s, border-color 0.3s;
 }
@@ -273,12 +275,6 @@ ul {
   }
 }
 
-.imagen-video-imagen {
-  border-radius: 40px;
-  width: 900px;
-  height: 350px;
-  
-}
 .banner-text{
   width: 585px;
   height: 100px;
@@ -295,6 +291,7 @@ ul {
   background: rgb(140,193,215);
   background:linear-gradient(90deg, rgba(140,193,215,1) 35%, rgba(100,174,199,1) 100%);
 }
+
 @media (max-width: 600px) {
   .imagen-video img {
     width: 300px;
@@ -306,22 +303,60 @@ ul {
 
   .imagen-video-imagen  {
     width: 500px;
-    margin-right: 300px;
+  
   }
-  .video{
-    margin-left: 310px;
-  }
+
 
   .icons-lineal{
     width: 600px;
     margin-left: 30px;
   }
   .imagenen-sonrisa{
-
     margin-top: 400px;
   margin-right: 50px;
   }
   .contininer-imagen-sonrisa{
     width: 600px;
+  }
+  .banner-text{
+    margin-left: 150px;
+    margin-bottom: 300px;
+  }
+
+  
+}
+.imagen-video{
+  width: 900px;
+  margin-right: 6px;
+
+}
+@media (max-width: 600px) {
+  .imagen-video img{
+    width: 600px;
+    height: 400px;
+   
+  }
+
+   
+   
+}
+
+
+.imagen-video-container{
+  margin-bottom:550px;
+  height: 400px;
+}
+
+@media (max-width: 600px) {
+  .imagen-video-container img{
+ margin-left: 307px;
+
+  }
+}
+
+@media (max-width: 600px) {
+  .video-final{
+    margin-left: 300px;
+    margin-top: 200px;
   }
 }
