--- a/src/assets/globals.css
+++ b/src/assets/globals.css
@@ -19,8 +19,14 @@
   }
 }
 
-body {
+/* body {
   /* background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif; */
+
+body {
+  font-family: 'Poppins', sans-serif;
+}
+p {
+position: absolute;
 }
