--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,25 +1,59 @@
  .responsive-smile-image {
-    position: absolute;
-    z-index: 0;
-    width: 41.666%; /* equivalente a w-5/12 */
-    top: 62.8rem;
-    right: 52.5rem;
-  
-     left: calc(5/12 * -10%),
-  }
-  
-  @media (max-width: 768px) {
-    .responsive-smile-image {
-      width: 50%; /* ligeramente más grande en móviles */
-      right: -5%; /* ajuste para móviles */
-       top: 148.4rem;
-    left: -1rem;
-  
-    }
-  }
-  
-  @media (max-width: 480px) {
-    .responsive-smile-image {
-      width: 60%; /* aún más grande en móviles pequeños */
-    }
-  }
+   position: absolute;
+   z-index: 0;
+   width: 41.666%;
+   /* equivalente a w-5/12 */
+   top: 92.8rem;
+   right: 52.5rem;
+
+   left: calc(5/12 * -10%),
+ }
+
+ @media (max-width: 768px) {
+   .responsive-smile-image {
+     width: 50%;
+     /* ligeramente más grande en móviles */
+     right: -5%;
+     /* ajuste para móviles */
+     top: 161rem;
+     left: -1rem;
+
+   }
+ }
+
+ @media (max-width: 480px) {
+   .responsive-smile-image {
+     width: 60%;
+     /* aún más grande en móviles pequeños */
+   }
+ }
+
+ .responsive-smile-image-2 {
+   position: absolute;
+   z-index: 0;
+   width: 41.666%;
+   /* equivalente a w-5/12 */
+   top: 281.5rem;
+   right: 52.5rem;
+
+   left: calc(5/12 * -10%),
+ }
+
+ @media (max-width: 768px) {
+   .responsive-smile-image-2 {
+     width: 50%;
+     /* ligeramente más grande en móviles */
+     right: -5%;
+     /* ajuste para móviles */
+     top: 370.5rem;
+     left: -1rem;
+
+   }
+ }
+
+ @media (max-width: 480px) {
+   .responsive-smile-image-2 {
+     width: 60%;
+     /* aún más grande en móviles pequeños */
+   }
+ }
